test/kuttl/tests/aiplatform-with-ingress/00-secrets.yaml
# Test: AIPlatform with Ingress Configuration

apiVersion: v1
kind: Secret
metadata:
  name: test-splunk-secret
type: Opaque
stringData:
  hec_token: "test-hec-token-12345"
  password: "TestPassword123!"
